--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -8,8 +8,19 @@ body {
     margin: 0;
 }
 
-p {
+h1, h2, h3, p {
     margin: 0;
+}
+
+.inline-middle {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.inline-middle-fs-0 {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 0;
 }
 
 .inline {
@@ -18,19 +29,16 @@ p {
 }
 
 .left {
-    width: 260px;
+    width: 230px;
     background-color: red;
-}
-
-.right {
-    width: 433px;
-    background-color: green;
+    padding: 20px;
 }
 
 .right-border {
-    width: 423px;
+    width: 383px;
     background-color: green;
     border-left: blue solid 10px;
+    padding: 15px;
 }
 
 .border-bottom {
@@ -53,4 +61,13 @@ p {
     margin: 0;
     padding: 0;
     border-width: 0;
+}
+
+.image-style {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
