--- a/src/main/resources/templates/pdf-template.html
+++ b/src/main/resources/templates/pdf-template.html
@@ -4,15 +4,15 @@
 <head>
     <title>Curriculum Vitae</title>
 <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"/>-->
-    <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link th:if="${type == 'html'}" rel="stylesheet" href="/css/styles.css"/>
+    <link th:if="${type == 'pdf'}" rel="stylesheet" href="css/styles.css"/>
 </head>
-
-<body>
 
 <!--page-size=793px-->
 
-<div><!-- data column -->
+<body>
+
+<div>
     <div class="div1">column 1</div><div class="div2">column 2</div>
 </div>
 
@@ -22,7 +22,7 @@
     <div class="border-bottom">
         <div class="inline-middle-fs-0 left ">
             <img class="image-style" th:src="|data:image/png;base64,${image}|" alt="image"/>
-        </div><div class="inline-middle right-border">
+        </div><div class="inline-middle right">
             <h1 th:text="${cv.person.firstName.toUpperCase()}"></h1>
             <h1 th:text="${cv.person.lastName.toUpperCase()}"></h1>
             <h2 th:text="${cv.person.job.toUpperCase()}"></h2>
@@ -30,13 +30,23 @@
     </div>
 
     <div>
-        <div class="inline left">
-            4dfhdh fhdfh dh h
-        </div><div class="inline right-border">
+        <div class="inline left mt-5px">
+            <h3 class="text-right">COMPÉTENCES</h3>
+            <div class="mb-3" th:each="skill : ${cv.skills}">
+                <p class="text-right" th:text="${skill.name}"></p>
+            </div>
+            <h3 class="text-right mt-20px">INFORMATIONS</h3>
+            <p class="text-right"><span th:text="${age}"></span> ans</p>
+            <p class="text-right">Mobilité : <span th:text="${cv.information.mobility}"></span></p>
+            <p class="text-right" th:text="${cv.information.phone}"></p>
+            <p class="text-right" th:text="${cv.information.email}"></p>
+            <p class="text-right"><a class="text-right" th:href="${cv.information.linkedIn}" th:text="${cv.information.linkedIn}"></a></p>
+            <p class="text-right"><a class="text-right" th:href="${cv.information.gitHub}" th:text="${cv.information.gitHub}"></a></p>
+        </div><div class="inline right-border mt-5px">
             <h3>PROFILE</h3>
             <p th:text="${cv.person.profile}"></p>
-            <h3>EXPERIENCES</h3>
-            <div class="mb-3" th:each="experience : ${cv.experiences}">
+            <h3 class="mt-20px">EXPÉRIENCES</h3>
+            <div class="mt-10px" th:each="experience : ${cv.experiences}">
                 <strong th:text="${experience.title}"></strong>
                 <p th:text="${experience.society}"></p>
                 <p th:text="${experience.location}"></p>
@@ -44,33 +54,7 @@
         </div>
     </div>
 
-
 </div>
-
-
-<!--<div class="container bg-danger">-->
-<!--    <div class="row border-bottom">-->
-<!--        <div class="col">4fhfhg hdhdh hdhd</div>-->
-<!--        <div class="col">-->
-<!--            <h1 th:text="${cv.person.firstName.toUpperCase()}"></h1>-->
-<!--            <h1 th:text="${cv.person.lastName.toUpperCase()}"></h1>-->
-<!--            <h2 th:text="${cv.person.job.toUpperCase()}"></h2>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="row bg-primary">-->
-<!--        <div class="col-4">4dfhdh fhdfh dh h</div>-->
-<!--        <div class="col-8 border-start">-->
-<!--            <h3>PROFILE</h3>-->
-<!--            <p th:text="${cv.person.profile}"></p>-->
-<!--            <h3>EXPERIENCES</h3>-->
-<!--            <div class="mb-3" th:each="experience : ${cv.experiences}">-->
-<!--                <strong th:text="${experience.title}"></strong>-->
-<!--                <p th:text="${experience.society}"></p>-->
-<!--                <p th:text="${experience.location}"></p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
 </body>
 </html>
