Add javadoc for PdfService

--- a/src/main/resources/templates/pdf-template.html
+++ b/src/main/resources/templates/pdf-template.html
@@ -49,8 +49,8 @@
             <h3 th:if="${cv.experiences.size() == 1}" class="mt-20px">EXPÉRIENCE</h3>
             <div class="mt-10px" th:each="experience : ${cv.experiences}">
                 <strong th:text="${experience.society}"></strong><strong> - </strong><strong th:text="${experience.location}"></strong><strong> | </strong><strong th:text="${experience.year}"></strong>
-                <p><span th:text="${experience.title}"></span> | <span th:text="${experience.duration}"></span></p>
-                <p th:text="${experience.description}"></p>
+                <p><span th:text="${experience.title}"></span> | <span th:text="${experience.duration}"></span><span> mois</span></p>
+                <p class="new-line" th:text="${experience.description}"></p>
             </div>
         </div>
     </div>
