--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -36,13 +36,13 @@ h1, h2, h3, p {
 }
 
 .right {
-    width: 383px;
+    width: 398px;
     background-color: green;
     padding: 15px 15px 15px 20px;
 }
 
 .right-border {
-    width: 383px;
+    width: 398px;
     background-color: green;
     border-left: #555 solid 5px;
     padding: 15px;
@@ -83,6 +83,10 @@ h1, h2, h3, p {
 
 a {
     color: black;
+}
+
+.new-line {
+    white-space: pre-wrap;
 }
 
 .div1 {
