--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,6 +2,8 @@
 body {
     margin: 50px;
     font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.4;
+    color: #223;
 }
 
 @page {
@@ -11,6 +13,10 @@ body {
 
 h1, h2, h3, p {
     margin: 0;
+}
+
+.container {
+    margin-left: calc((100vw - 793px) / 2);
 }
 
 .inline-middle {
@@ -31,19 +37,16 @@ h1, h2, h3, p {
 
 .left {
     width: 230px;
-    background-color: red;
     padding: 15px;
 }
 
 .right {
     width: 398px;
-    background-color: green;
     padding: 15px 15px 15px 20px;
 }
 
 .right-border {
     width: 398px;
-    background-color: green;
     border-left: #555 solid 5px;
     padding: 15px;
 }
@@ -82,27 +85,9 @@ h1, h2, h3, p {
 }
 
 a {
-    color: black;
+    color: #222;
 }
 
 .new-line {
     white-space: pre-wrap;
-}
-
-.div1 {
-    display: inline-block;
-    width: 100px;
-    background-color: red;
-    margin: 0;
-    padding: 0;
-    border-width: 0;
-}
-
-.div2 {
-    display: inline-block;
-    width: 593px;
-    background-color: green;
-    margin: 0;
-    padding: 0;
-    border-width: 0;
 }
