--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -53,6 +53,7 @@ h1, h2, h3, p {
 
 .border-bottom {
     border-bottom: #555 solid 5px;
+    width: 693px;
 }
 
 .image-style {
@@ -76,8 +77,8 @@ h1, h2, h3, p {
     margin-top: 10px;
 }
 
-.mt-20px {
-    margin-top: 20px;
+.mt-30px {
+    margin-top: 30px;
 }
 
 .mb-10px {
