--- a/src/main/resources/templates/pdf-template.html
+++ b/src/main/resources/templates/pdf-template.html
@@ -5,6 +5,7 @@
     <title>Curriculum Vitae</title>
     <link th:if="${type == 'html'}" rel="stylesheet" href="/css/styles.css"/>
     <link th:if="${type == 'pdf'}" rel="stylesheet" href="css/styles.css"/>
+    <link rel="icon" type="image/png" href="/images/favicon.png"/>
 </head>
 
 <!--page-size=793px-->
